--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -1,35 +1,36 @@
-name: Retrain and Commit ML Model
+name: Retrain Model
 
 on:
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
 
 jobs:
-  train-and-commit:
+  train:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Train Model
-        run: |
-          python src/pipeline/training_pipeline.py
+    - name: Set PYTHONPATH
+      run: echo "PYTHONPATH=$PYTHONPATH:." >> $GITHUB_ENV
 
-      - name: Commit and Push Trained Model
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add artifacts/
-          git commit -m "🔁 Auto-trained model on GitHub Actions"
-          git push
-        continue-on-error: true  # Prevent failure if nothing changed
+    - name: Run training pipeline
+      run: python src/pipeline/training_pipeline.py
+
+    - name: Commit new model
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add artifacts/best_model.pkl
+        git commit -m "🔁 Retrained model via GitHub Actions"
+        git push
