--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11'
 
     - name: Install dependencies
       run: |
@@ -32,5 +32,5 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add artifacts/best_model.pkl
-        git commit -m "🔁 Retrained model via GitHub Actions"
+        git commit -m "Retrained model via GitHub Actions"
         git push
