--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -1,8 +1,3 @@
-name: Retrain Model
-
-on:
-  workflow_dispatch:
-
 jobs:
   train:
     runs-on: ubuntu-latest
@@ -32,5 +27,5 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add artifacts/best_model.pkl
-        git commit -m "Retrained model via GitHub Actions"
-        git push
+        git commit -m "Retrained model via GitHub Actions" || echo "No changes to commit"
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
