--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -34,3 +34,5 @@ jobs:
         git add artifacts/best_model.pkl
         git commit -m "Retrained model via GitHub Actions" || echo "No changes to commit"
         git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+    - name: Trigger Render deployment
+      run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
